--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 h1 {
   font-weight: bold;
   color: rgb(255,244,0);
-  text-align: left;
+  text-align: center;
   margin-left: 150px;
   letter-spacing: 3px;
   padding-top: 19px;
