--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,14 @@ h1 {
   font-family: 'Unica One', cursive;
 }
 
+li {
+  font-family: 'Unica One', cursive;
+  color: rgb(255,244,0);
+  text-align: right;
+  margin-right: 300px;
+  padding-top: 24px;
+  font-size: 20px;
+}
 
 #header {
     background-color: rgb(10,10,10);
