--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,8 +18,6 @@ li {
   display: inline;
 }
 
-
-
 #header {
     background-color: rgb(10,10,10);
     height: 100px;
@@ -84,12 +82,12 @@ a img:hover {
    color: rgb(255,244,0);
  }
 
- #1 {
+ #one {
    display: inline-block;
    width: 20%;
  }
 
- #2 {
+ #two {
    display: inline-block;
    width: 79%;
  }
