--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,9 +26,7 @@ li {
 
 #footer {
     background-color: rgb(10,10,10);
-    height: 140px;
     width: 100%;
-    position: relative;
 }
 
 h2 {
@@ -40,11 +38,6 @@ h2 {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-}
-
-iframe {
-  margin: auto;
-  display: block;
 }
 
 body {
@@ -97,6 +90,7 @@ a img:hover {
    display: inline-block;
    width: 20%;
    vertical-align: middle;
+   max-width: 20%;
  }
 
  #two {
@@ -105,3 +99,61 @@ a img:hover {
    text-align: right;
    vertical-align: middle;
  }
+
+ #footerdiv {
+   width: 80%;
+   text-align: center;
+   vertical-align: middle;
+ }
+
+#fone {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#ftwo {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#fthree {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#ffour {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#ffive {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#fsix {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+h3 {
+  color: rgb(255,244,0);
+  font-size: 30px;
+  font-family: 'Unica One', cursive;
+  letter-spacing: 3px;
+}
+
+img.yt {
+  width: 40%;
+  height: auto;
+}
+
+img.skype {
+  width: 35%;
+  height: auto;
+}
+
+img.twitter {
+  width: 20%;
+  height: auto;
+}
