--- a/stylesheet.css
+++ b/stylesheet.css
@@ -98,3 +98,14 @@ a img:hover {
    text-align: right;
    vertical-align: middle;
  }
+
+ .centerp {
+   text-align: center;
+   width: 50%;
+   text-decoration: none;
+   font-size: 1.9em;
+   font-family: 'Unica One', cursive;
+   margin: auto;
+   padding-top: 30px;
+   padding-bottom: 30px;
+ }
